     http://docs.python.org/api/supporting-cycle-detection.html

  After Zope 2.9.1

    Bugs fixed

      - Collector #2051: Applied patch by Yoshinori Okuji to fix some
        XML export/import problems, and added tests for that feature.

      - Missing import of NotFound in webdav.Resource.

      - Collector #2037: fixed broken ACTUAL_URL for '/'

  Zope 2.9.1  (2006/02/25)

    Bugs fixed

      - Collector #1819: fixed signature of
        MountedObject.SimpleTrailblazer._construct()

      - Collector #2019: removed validateValue() from cAccessControl (already
        removed in former Zope versions from the AccessControl Python
        implementation)

      - Collector #1991: ZPublisher did not deal properly with a trailing
        %20 in the URL

      - Collector #1989:  'test.py' now copyied to $ZOPE_HOME/bin
        during installation, which re-enables tests run from the instance
        home.

      - zope.app.introspector was not included with the source archive

      - Collector #2013: improved XHTML conformance of error messages,
        some of which did not close '<p>' tags.

      - Collector #1999: fixed broken FTP rename functionality
        (RNFR now returns 350 as status code instead 250)

      - officially deprecated the zLOG module (to be removed in Zope 2.11).
        Use the logging module of Python instead.

      - Replaced used of deprecated 'OFS.content_types' module with cognates
        from 'zope.app.content_types'.

      - Collector #2002: fixed broken 'ls -R' functionality (didn't
        recurse properly subclasses of OFS.Folder)

  Zope 2.9.0 (2006/01/09)

    Bugs fixed

      - deprecated OFS.content_types

      - Fixed ConflictError when using sessions.

  Zope 2.9.0 beta 2 (2005/12/24)

    Bugs fixed

      - Collector #1939: When running as a service, Zope could
        potentially collect too much log output filling the NT Event
        Log. When that happened, a 'print' during exception handling