@@ -189,6 +189,12 @@ def publish_module(module_name,
                 stdout=response.stdout
             if request is None:
                 request=Request(stdin, environ, response)
+                # make sure that the request we hand over has the
+                # default layer/skin set on it; subsequent code that
+                # wants to look up views will likely depend on it
+                from zope.app.publication.browser import setDefaultSkin
+                setDefaultSkin(request)
+
             for k, v in extra.items(): request[k]=v
             response = publish(request, module_name, after_list, debug=debug)
         except SystemExit, v:
